@@ -10,6 +10,21 @@ server {
 }
 @{fi}
 
+@{if model.second}
+server {
+	listen         443;
+	server_name    @{model.second};
+
+	location ^~ /.well-known/acme-challenge/ {
+		default_type "text/plain";
+		root /www/acme/;
+		break;
+	}
+
+	rewrite        ^ https://@{model.url}$request_uri? permanent;
+}
+@{fi}
+
 server {
 
 	@{if model.version >= 1100}
