@@ -14,6 +14,11 @@ server {
 
 	listen         80;
 	server_name    @{model.url};
+
+	@{if model.second}
+	server_name    @{model.second};
+	@{fi}
+
 	charset        utf-8;
 
 	location ^~ /.well-known/acme-challenge/ {
