@@ -74,7 +74,7 @@ table td { vertical-align: middle !important;}
 .fs10 { font-size: 10px !important; }
 .help { font-size: 11px; color: #AAB2BD; margin-top: 7px; line-height: 13px; }
 .help .fa { margin-right: 5px; }
-.help code { font: normal normal 11px Arial; background-color: #F0F0F0; padding: 2px 5px; border-radius: 4px; }
+.help code { font: normal normal 11px Arial; background-color: #F0F0F0; padding: 1px 5px; border-radius: 4px; }
 
 .legend { margin-bottom: 10px; }
 .legend .fa { width: 14px; vertical-align: middle; margin-right: 5px; }
@@ -105,7 +105,7 @@ canvas { display: block; }
 .applications .items > table tr:first-child td { border-top: 0 !important; }
 .applications .items > table tr:hover { background-color: #F8F8F8; }
 .applications .items > table table { width: 100%; }
-.applications .items > table table td { padding: 2px 0; font-size: 10px; text-align: right; border: 0; }
+.applications .items > table table td { padding: 2px 0; font-size: 11px; text-align: right; border: 0; }
 .applications td button { outline: 0; background-color: transparent; border: 0; font-size: 12px; width: 20px; height: 20px; padding: 0; color: silver; }
 .applications td button:hover { color: black; background-color: #E0E0E0; }
 .applications td button:last-child { color: #E9573F; }
